Introduce static constructor for PartitionsBuilderSplitsFirst